# seolpyo-mplchart

./: README.md  pyproject.toml
seolpyo_mplchart/: __init__.py  _base.py  _cursor.py  _draw.py  _slider.py  base.py  cursor.py  draw.py  slider.py  test.py  utils.py  xl_to_dict.py
seolpyo_mplchart/_chart/: __init__.py  _base.py  test.py
seolpyo_mplchart/_chart/_cursor/: __init__.py  _artist.py  _cursor.py  _info.py
seolpyo_mplchart/_chart/_draw/: __init__.py  _artist.py  _data.py  _draw.py  _lim.py
seolpyo_mplchart/_chart/_slider/: __init__.py  _base.py  _data.py  _mouse.py  _nav.py
seolpyo_mplchart/_chart/base/: __init__.py  a_canvas.py  b_artist.py  c_draw.py  d_segment.py  e_axis.py  f_background.py  g_event.py  h_data.py  test.py
seolpyo_mplchart/_chart/cursor/: __init__.py  b_artist.py  c_draw.py  d_segment.py  e_axis.py  g_event.py  h_data.py  test.py
seolpyo_mplchart/_chart/slider/: __init__.py  a_canvas.py  b_artist.py  c_draw.py  d_segment.py  e_axis.py  f_background.py  g_event.py  h_data.py  test.py
seolpyo_mplchart/_config/: __init__.py  ax.py  candle.py  config.py  cursor.py  figure.py  format.py  ma.py  nums.py  unit.py  utils.py  volume.py
seolpyo_mplchart/_config/slider/: __init__.py  config.py  figure.py  nav.py
seolpyo_mplchart/_utils/: __init__.py  nums.py  utils.py
seolpyo_mplchart/_utils/theme/: __init__.py  dark.py  light.py
seolpyo_mplchart/_utils/xl/: __init__.py  csv.py  xlsx.py
seolpyo_mplchart/data/: apple.txt  samsung.txt
seolpyo_mplchart/sample/: apple.txt  samsung.txt
