[build-system]
requires = [
  "setuptools >= 65.0",
  "matplotlib >= 3.7.0",
  "pandas >= 2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "seolpyo-mplchart"
version = "1.0.0"
dependencies  = [
  "matplotlib >= 3.7.0",
  "pandas >= 2.0.0",
]
license = {text = "MIT License"}
description = "Fast candlestick chart using Python. Includes navigator, slider, navigation, and text information display functions"
readme = "README.md"
requires-python = ">= 3.11"
authors = [
  {name="white-seolpyo", email="white-seolpyo@naver.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Matplotlib",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "chart", "차트", "stock", "주식", "invest", "투자", "finance", "파이낸스",
    "candle", "캔들", "candlestick", "캔들스틱", "matplotlib", "mplfinance",
    "pyqtgraph", "finplot", "virtual currency", "가상화폐", "coin", "코인",
    "bitcoin", "비트코인", "ethereum", "이더리움",
]

[project.urls]
Homepage = "https://white.seolpyo.com/"
"Documentation(English)" = "https://white.seolpyo.com/entry/148/"
"Documentation(한글)" = "https://white.seolpyo.com/entry/147/"
repository = "https://github.com/white-seolpyo/seolpyo-mplchart"
Issues = "https://github.com/white-seolpyo/seolpyo-mplchart/issues"

[tool.setuptools]
packages = [
  "seolpyo_mplchart",
  "seolpyo_mplchart.sample",
]

